[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Barrel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bubble Bobble.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://warthog.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.4494, 36.6429 )

[sub_resource type="Animation" id=2]
resource_name = "killed"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.168627 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "normal"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.317647, 0.0509804, 0.0509804, 0.388235 )

[sub_resource type="DynamicFont" id=5]
size = 160
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "DeadPanel"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.772549 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 49.709, 43.2089 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )
killed_color = Color( 1, 1, 1, 0.254902 )

[node name="Tank" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Barrel" parent="." instance=ExtResource( 3 )]

[node name="BulletPoint" type="Node2D" parent="Barrel"]
position = Vector2( 0, 356.044 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
smoothing_enabled = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/killed = SubResource( 2 )
anims/normal = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dead" type="Panel" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.973745 )
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Dead"]
margin_left = 142.0
margin_top = 166.0
margin_right = 857.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.223529, 0.00784314, 0.00784314, 1 )
text = "DEAD"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadPanelAnim" type="AnimationPlayer" parent="CanvasLayer/Dead"]
anims/DeadPanel = SubResource( 6 )

[node name="Score" type="Label" parent="CanvasLayer/Dead"]
margin_left = 362.183
margin_top = 350.0
margin_right = 458.183
margin_bottom = 406.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.168627, 0.0117647, 0.0117647, 1 )

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 8.0
margin_top = 5.0
margin_right = 208.0
margin_bottom = 31.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.654902, 0.486275, 0.160784, 1 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
pitch_scale = 0.15
autoplay = true
[connection signal="health_updated" from="." to="CanvasLayer/HealthBar" method="_on_Player_health_updated"]
[connection signal="killed" from="." to="Barrel" method="_on_Player_killed"]
[connection signal="killed" from="." to="." method="_on_Player_killed"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
